slight edit to page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,13 @@
 	<title>Scratch Pad</title>
 </head>
 <body>
-<h1>Hello Coursera</h1>
+<h1>Hello Coursera!</h1>
+<p>This is my test page for learning how to use GitHub to mark, commit, and push things to the site.</p>
+<p>I'm also taking the opportunity to try out some of the functions of SublimeText 3. Pretty cool editor. Here's what a bulletted list looks like:</p>
+<ul><li>Item 1
+<li>Item 2
+<li>Item3
+</ul>
+<p>Is it important for li tags to be closed, I wonder?</p>
 </body>
 </html>
